# plover-custom-folding

./: README.md  index.py  setup.cfg
plover_custom_fold/: EngineGetterExtension.py
plover_custom_folding/: EngineGetterExtension.py  PythonDictionary.py  PythonFoldingDictionary.py  WriteoutsDictionary.py  __init__.py
plover_custom_folding/lib/: Rule.py  builder.py  types.py  util.py
