[metadata]
name = plover-custom-folding
version = 0.0.0
keywords = plover plover_plugin

description = Define custom folding rules (e.g., prefix folds)

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0-rc2
pacakges =
    plover_custom_folding

[options.entry_points]
plover.dictionary =
    fold-py = plover_custom_folding.PythonFoldingDictionary:PythonFoldingDictionary
plover.extension =
    EngineGetterExtension = plover_custom_folding.EngineGetterExtension:EngineGetterExtension