[metadata]
name = plover-custom-folding
version = 0.0.0
keywords = plover plover_plugin

description = Define custom folding rules (e.g., prefix folds)

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = True
setup_requires =
    setuptools >= 30.3.0
install_requires =
    plover >= 4.0.0-rc2
packages =
    plover_custom_folding
    plover_custom_folding.lib

[options.entry_points]
plover.dictionary =
    py2 = plover_custom_folding.PythonDictionary:PythonDictionary
    fold-py = plover_custom_folding.PythonFoldingDictionary:PythonFoldingDictionary
    writeouts-json = plover_custom_folding.WriteoutsDictionary:WriteoutsDictionary
plover.extension =
    EngineGetterExtension = plover_custom_folding.EngineGetterExtension:EngineGetterExtension